RESOLVED FIXED54604
fix compile error introduced in 78752
https://bugs.webkit.org/show_bug.cgi?id=54604
Summary fix compile error introduced in 78752
David Grogan
Reported 2011-02-16 18:22:13 PST
fix compile error introduced in 78752
Attachments
Patch (1.44 KB, patch)
2011-02-16 18:22 PST, David Grogan
jorlow: review+
David Grogan
Comment 1 2011-02-16 18:22:32 PST
Jeremy Orlow
Comment 2 2011-02-16 18:23:47 PST
Comment on attachment 82733 [details] Patch r=me
Jeremy Orlow
Comment 3 2011-02-16 18:28:24 PST
Note You need to log in before you can comment on or make changes to this bug.