2011-02-16  David Grogan  <dgrogan@chromium.org>

Reviewed by Jeremy Orlow.

        fix compile error introduced in 78752
        https://bugs.webkit.org/show_bug.cgi?id=54604

        * storage/IDBRequest.h:

Canonical link: https://commits.webkit.org/68735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78759 268f45cc-cd09-0410-ab3c-d52691b4dbfc